# PurC-Fetcher

./: .gitignore  CMakeLists.txt  README.md  run.sh
Source/: CMakeLists.txt
Source/PurCFetcher/: CMakeLists.txt  MyMacros.cmake  PlatformLinux.cmake  PlatformMac.cmake  Sources.txt  SourcesLinux.txt  config.h
Source/PurCFetcher/IPC/: Connection.h  Decoder.h  Encoder.h  MessageNames.cpp  MessageNames.h  SharedBufferDataReference.h
Source/PurCFetcher/NetworkProcess/: AdClickAttributionManager.cpp  NetworkCORSPreflightChecker.cpp  NetworkConnectionToWebProcess.cpp  NetworkConnectionToWebProcess.h  NetworkDataTask.cpp  NetworkDataTaskBlob.cpp  NetworkHTTPSUpgradeChecker.cpp  NetworkLoad.cpp  NetworkLoadChecker.cpp  NetworkProcess.cpp  NetworkProcess.h  NetworkProcessCreationParameters.cpp  NetworkResourceLoadParameters.cpp  NetworkResourceLoader.cpp  NetworkResourceLoader.h  NetworkSession.cpp  NetworkSession.h  NetworkSocketChannel.cpp  NetworkSocketStream.cpp  PingLoad.cpp
Source/PurCFetcher/Shared/: AuxiliaryProcessMessages.h  AuxiliaryProcessMessagesReplies.h  BackForwardItemIdentifier.h  BlobData.h  CacheStorageEngineConnectionMessages.h  CacheStorageEngineConnectionMessagesReplies.h  CacheValidation.h  CachedResourceHandle.h  ContentSecurityPolicyClient.h  CustomHeaderFields.h  DocumentWriter.h  EventInterfaces.h  FloatPoint.h  FloatRect.h  FloatSize.h  FrameDestructionObserver.h  HTTPHeaderField.h  HTTPHeaderMap.h  HTTPHeaderNames.h  IntPoint.h  IntRect.h  IntSize.h  LayoutPoint.h  LayoutSize.h  LayoutUnit.h  Length.h  LengthBox.h  MessagePortChannel.h  MessagePortChannelProvider.h  MessageWithMessagePorts.h  NavigationAction.h  NetworkConnectionToWebProcessMessages.h  NetworkConnectionToWebProcessMessagesReplies.h  NetworkLoadMetrics.h  NetworkMDNSRegisterMessages.h  NetworkProcessConnectionMessages.h  NetworkProcessConnectionMessagesReplies.h  NetworkProcessMessages.h  NetworkProcessMessagesReplies.h  NetworkProcessProxyMessages.h  (+34 more)
Source/PurCFetcher/auxiliary/: APIError.cpp  APIError.h  APIObject.cpp  APIObject.h  AdClickAttribution.cpp  AdClickAttribution.h  AuthenticationChallengeDisposition.h  AuthenticationManager.cpp  AuthenticationManager.h  AuxiliaryProcess.cpp  AuxiliaryProcess.h  AuxiliaryProcessMain.h  AuxiliaryProcessSupplement.h  CallbackID.h  ClientOrigin.h  ContentExtensionActions.h  ContentRuleListResults.h  ContentSecurityPolicy.cpp  ContentSecurityPolicy.h  ContentSecurityPolicyClient.cpp  ContentSecurityPolicyClient.h  ContentSecurityPolicyHash.h  ContentSecurityPolicyResponseHeaders.cpp  ContentSecurityPolicyResponseHeaders.h  CrossOriginAccessControl.cpp  CrossOriginAccessControl.h  CrossOriginPreflightResultCache.cpp  CrossOriginPreflightResultCache.h  CrossSiteNavigationDataTransfer.h  DecodeEscapeSequences.h  DeviceOrientationOrMotionPermissionState.h  DiagnosticLoggingClient.h  DiagnosticLoggingKeys.cpp  DiagnosticLoggingKeys.h  DiagnosticLoggingResultType.h  DocumentIdentifier.h  DownloadProxy.cpp  DownloadProxy.h  EditorState.cpp  EditorState.h  (+145 more)
Source/PurCFetcher/database/: DatabaseAuthorizer.cpp  DatabaseAuthorizer.h  SQLValue.h  SQLiteAuthorizer.cpp  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteDatabaseTracker.cpp  SQLiteDatabaseTracker.h  SQLiteDatabaseTrackerClient.h  SQLiteFileSystem.cpp  SQLiteFileSystem.h  SQLiteStatement.cpp  SQLiteStatement.h  SQLiteStatementAutoResetScope.cpp  SQLiteStatementAutoResetScope.h  SQLiteTransaction.cpp  SQLiteTransaction.h
Source/PurCFetcher/ipc/: ArgumentCoder.h  Connection.cpp  Connection.h  Decoder.h  Encoder.h  FormDataReference.h  ImageDataReference.h  SharedBufferDataReference.h  SharedMemory.cpp  SharedMemory.h
Source/PurCFetcher/messages/: CacheStorageEngineConnectionMessages.h  CacheStorageEngineConnectionMessagesReplies.h  DownloadProxy.messages.in  DownloadProxyMessages.h  DownloadProxyMessagesReplies.h  NetworkConnectionToWebProcess.messages.in  NetworkConnectionToWebProcessMessages.h  NetworkConnectionToWebProcessMessagesReplies.h  NetworkProcess.messages.in  NetworkProcessConnection.messages.in  NetworkProcessConnectionMessages.h  NetworkProcessConnectionMessagesReplies.h  NetworkProcessMessages.h  NetworkProcessMessagesReplies.h  NetworkProcessProxy.messages.in  NetworkProcessProxyMessages.h  NetworkProcessProxyMessagesReplies.h  NetworkResourceLoader.messages.in  NetworkSocketStream.messages.in  NetworkSocketStreamMessages.h  NetworkSocketStreamMessagesReplies.h  StorageAreaMap.messages.in  StorageAreaMapMessagesReplies.h  StorageManagerSetMessages.h  WebCookieManager.messages.in  WebCookieManagerMessages.h  WebCookieManagerMessagesReplies.h  WebCookieManagerProxyMessages.h  WebProcessPool.messages.in  WebProcessPoolMessages.h  WebProcessPoolMessagesReplies.h  WebResourceLoader.messages.in  WebResourceLoaderMessages.h  WebResourceLoaderMessagesReplies.h  WebSocketChannel.messages.in  WebSocketChannelMessages.h  WebSocketChannelMessagesReplies.h  WebSocketStream.messages.in  WebSocketStreamMessages.h  WebSocketStreamMessagesReplies.h
Source/PurCFetcher/msg/: msg-init.msg.in
Source/PurCFetcher/network/: AdClickAttributionManager.cpp  AdClickAttributionManager.h  AuthenticationChallengeBase.cpp  AuthenticationChallengeBase.h  AuthenticationClient.h  CacheModel.cpp  CacheModel.h  CacheValidation.cpp  CacheValidation.h  CachedResourceRequestInitiators.cpp  CachedResourceRequestInitiators.h  CertificateInfoBase.h  Cookie.h  CookieJar.cpp  CookieJar.h  CookieRequestHeaderFieldProxy.h  CookieStorage.h  Credential.h  DNS.cpp  (+125 more)
Source/WTF/: CMakeLists.txt
Source/bmalloc/: CMakeLists.txt
Source/capi/: CMakeLists.txt  MyMacros.cmake
Source/cmake/: FindGLIB.cmake  FindLibGpgError.cmake  FindLibGpgError.cmake.bak  FindPurC.cmake  GlobalCCache.cmake  GlobalCommon.cmake  GlobalCompilerFlags.cmake  GlobalDist.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalFindPackage.cmake  GlobalMacros.cmake  GlobalPackaging.cmake  OptionsAppleWin.cmake  OptionsCommon.cmake  OptionsLinux.cmake  OptionsMSVC.cmake  OptionsMac.cmake  OptionsWin.cmake  OptionsWindows.cmake
Source/samples/: CMakeLists.txt
(+442 files in other folders)
